# log

./: .clang-format  CMakeLists.txt  README.md  example.cpp
example/: CMakeLists.txt  main.cpp
src/: IterableContainer.h  LogMessage.cpp  LogMessage.h  LogSeverity.cpp  LogSeverity.h  Nlog.cpp  Nlog.h  Utils.h  wlog.h
src/details/: Common.cpp  Common.h  LogMessage.h  Logging.h  PeriodicWorker.cpp  PeriodicWorker.h  Utils.cpp  Utils.h
src/loggers/: BasicFileLogger.cpp  BasicFileLogger.h  Logger.cpp  Logger.h  RotateFileLogger.cpp  RotateFileLogger.h  StdoutLogger.cpp  StdoutLogger.h
